--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,3 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* .relative:hover select {
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.01); /* Un leve escalado para resaltar */
